--- a/src/components/watchcard/watchcard.css
+++ b/src/components/watchcard/watchcard.css
@@ -2,12 +2,18 @@
     flex-direction: row;
     align-items: center;
 }
+.thetitle{
+    font-size: 22px;
+    font-weight: bold;
+    margin: 0;
+}
 .theimg{
-    max-height: 15rem;
-    max-width: 15rem;
+    height: 15rem;
+   width: 8rem;
 }
 .desc{
     font-weight: 500;
+    font-size: 14px;
     
 }
 .cardtitle{
@@ -18,4 +24,16 @@
 }
 .theheart{
     cursor: pointer;
+}
+.releasedate{
+    font-size: 12px;
+    color: gray;
+    margin-bottom: .5rem;
+    margin-left: 2rem;
+
+}
+.pop{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
