--- a/src/components/moviedetails/moviedetails.css
+++ b/src/components/moviedetails/moviedetails.css
@@ -1,136 +1,158 @@
-.details-content{
+
+.details-content {
     display: flex;
     flex-direction: column;
     width: 100%;
-
     margin-top: 2rem;
-}
-.details-card{
+  }
+  
+  .details-card {
     flex-direction: row;
     width: 90%;
     margin-left: 5%;
-}
-
-.detailimg{
-    width: 60rem;
-    height: 44rem;
-}
-.detailtitle-content{
+  }
+  
+  .detailimg {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .detailtitle-content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-}
-.detailtitle{
+    margin-bottom: 1rem;
+  }
+  
+  .detailtitle {
     font-weight: bold;
     font-size: 32px;
-}
-.detaildate{
+  }
+  
+  .theheart {
+    font-size: 2rem;
+    color: #ec2604;
+    cursor: pointer;
+  }
+  
+  .detaildate {
     font-size: 16px;
     font-weight: bold;
     color: gray;
-    margin-left: 7rem;
-    margin-top: 2rem;
-}
-.detailpop{
+    margin-top: 1rem;
+  }
+  
+  .detailpop {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin-top: 2rem;
-    width: 80%;
-}
-.detailpop p{
+    margin-top: 1rem;
     font-size: 20px;
-    font-weight: bold;
-}
-.detaildesc{
+  }
+  
+  .detaildesc {
     font-size: 18px;
-    width: 80%;
-    margin-left: 10%;
+    width: 100%;
     margin-top: 2rem;
     text-align: justify;
     font-weight: bold;
-}
-.tags{
+  }
+  
+  .tags {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 2rem;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-top: 1rem;
     font-size: 18px;
     font-weight: bold;
-    width: 60%;
-    margin-left: 10%;
-}
-.tagitem{
+  }
+  
+  .tagitem {
     background-color: orange;
-    padding: 5px;
+    padding: 5px 15px;
     border-radius: 5rem;
-    min-width: 8rem;
     text-align: center;
-}
-.durandlang{
+  }
+  
+  .durandlang {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 2rem;
-    width: 60%;
-    margin-left: 5%;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-top: 1rem;
     font-size: 18px;
-}
-.logos{
+  }
+  
+  .logos {
     display: flex;
-    justify-content: space-around;
-    margin-left: 5%;
-    align-items: center;
-    width: 80%;
-    margin-top: 2rem;
-}
-.logo{
-    height: 6rem;
-    width: 12rem;
-}
-.towebsite{
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+  
+  .logo {
+    max-height: 6rem;
+    max-width: 12rem;
+  }
+  
+  .towebsite {
     margin-top: 2rem;
     font-size: 20px;
     font-weight: bold;
     padding: 5px;
     border: 2px solid black;
     border-radius: 5px;
-    width: 8rem;
-    margin-left: 5rem;
+    width: fit-content;
     cursor: pointer;
     text-align: center;
-}
-.towebsite:hover{
+  }
+  
+  .towebsite:hover {
     background-color: orange;
     border: 2px solid orange;
-}
-@media (max-width: 768px) {
-    .details-card, .detailpop, .logos, .tags, .durandlang, .detailtitle-content {
-        flex-direction: column;
-    }
-    .tagitem, .logo{
-        margin-top: 1rem;
-    }
-    .detailimg{
-        width: 21rem;
-    }
-
-}
-.recomtitle{
+  }
+  
+  .recomtitle {
     font-weight: bold;
     margin-top: 2rem;
     margin-bottom: 2rem;
     margin-left: 5%;
-}
-.recocards{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.recocards{
+  }
+  
+  .recocards {
     display: grid;
-    grid-template-columns: repeat(5,1fr);
-    row-gap: 2rem;
-    column-gap: 2rem;
+    grid-template-columns: repeat(4 ,1fr);
+    gap: 2rem;
     margin-left: 5%;
-}
+    column-gap: 2rem;
+  }
+  
+  @media (max-width: 768px) {
+    .details-card,
+    .detailpop,
+    .logos,
+    .tags,
+    .durandlang,
+    .detailtitle-content {
+      flex-direction: column;
+    }
+  
+    .tagitem,
+    .logo {
+      margin-top: 1rem;
+    }
+  
+    .detailimg {
+      width: 100%;
+      height: auto;
+    }
+  
+    .detaildate,
+    .towebsite {
+      margin-left: 0;
+    }
+  
+    .recocards {
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    }
+  }
+  
