adjust ui cards

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -8,7 +8,7 @@ a{
 .watchedicon{
     display:flex;
     align-items: center;
-    font-size:x-large;
+    font-size:xx-large;
 }
 .hero{
     background-color: #F3F1F1;
